--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 
 .env
 sitedata.js
-coordinator-machine/simple.http
+03-multi-agent-architecture/agent-machines/agent-machine-03/.env
+03-multi-agent-architecture/agent-machines/agent-machine-03/setup.http
+03-multi-agent-architecture/agent-machines/agent-machine-04/.env
+03-multi-agent-architecture/agent-machines/agent-machine-04/setup.http
 
 # These are some examples of commonly ignored file patterns.
 # You should customize this list as applicable to your project.
