--- a/03-multi-agent-architecture/coordinator-machine/env.template
+++ b/03-multi-agent-architecture/coordinator-machine/env.template
@@ -1,13 +1,18 @@
 # Environment variables for the Coordinator Machine
+IP_ADDRESS_AGENT_1=<IP_ADDRESS_AGENT_1_MACHINE>
+IP_ADDRESS_NVIDIA_AGENT=<IP_ADDRESS_NVIDIA_1_MACHINE>
+IP_ADDRESS_AGENT_3=<IP_ADDRESS_AGENT_3_MACHINE>
+
+HOST_IP_ADDRESS=<IP_ADDRESS_OF_COORDINATOR_MACHINE>
+
 NODE_ID_AGENT_1=<NODE_ID_FOR_MACHINE_1_IN_AGENT_COLLECTION>
 NODE_ID_NVIDIA_AGENT=<NODE_ID_FOR_MACHINE_2_IN_AGENT_COLLECTION>
 NODE_ID_AGENT_3=<NODE_ID_FOR_MACHINE_3_IN_AGENT_COLLECTION>
-NODE_ID_AGENT_4=<NODE_ID_FOR_MACHINE_4_IN_AGENT_COLLECTION>
 
 NODE_ID_COORDINATOR=<NODE_ID_FOR_COORDINATOR_MACHINE>
 
 MODEL_URL=https://huggingface.co/lmstudio-community/gemma-1.1-2b-it-GGUF/resolve/main/gemma-1.1-2b-it-Q8_0.gguf?download=true
-HOST_IP_ADDRESS=<IP_ADDRESS_OF_COORDINATOR_MACHINE>
+
 CLIENT_ID=<YOUR_CLIENT_ID>
 DEVELOPER_ID_TOKEN=<YOUR_DEVELOPER_ID>
 API_KEY=1234
