updating code to get all scenarios to work

--- a/03-multi-agent-architecture/coordinator-machine/env.template
+++ b/03-multi-agent-architecture/coordinator-machine/env.template
@@ -11,7 +11,7 @@ NODE_ID_AGENT_3=<NODE_ID_FOR_MACHINE_3_IN_AGENT_COLLECTION>
 
 NODE_ID_COORDINATOR=<NODE_ID_FOR_COORDINATOR_MACHINE>
 
-MODEL_URL=https://huggingface.co/lmstudio-community/gemma-1.1-2b-it-GGUF/resolve/main/gemma-1.1-2b-it-Q8_0.gguf?download=true
+MODEL_URL=https://huggingface.co/lmstudio-ai/gemma-2b-it-GGUF/resolve/main/gemma-2b-it-q4_k_m.gguf?download=true
 
 CLIENT_ID=<YOUR_CLIENT_ID>
 DEVELOPER_ID_TOKEN=<YOUR_DEVELOPER_ID>
