--- a/01-single-agent-architecture/coordinator-machine/env.template
+++ b/01-single-agent-architecture/coordinator-machine/env.template
@@ -1,9 +1,13 @@
 # Environment variables for the Coordinator Machine
+IP_ADDRESS_AGENT_1=<IP_ADDRESS_AGENT_1_MACHINE>
+HOST_IP_ADDRESS=<IP_ADDRESS_OF_THE_COORDINATOR_COMPUTER>
+
 NODE_ID_AGENT_1=<NODE_ID_OF_THE_AGENT_MACHINE>
 NODE_ID_COORDINATOR=<NODE_ID_OF_THE_COORDINATOR_MACHINE>
-MODEL_URL=https://huggingface.co/lmstudio-community/gemma-1.1-2b-it-GGUF/resolve/main/gemma-1.1-2b-it-Q8_0.gguf?download=true
-HOST_IP_ADDRESS=<IP_ADDRESS_OF_THE_COORDINATOR_COMPUTER>
+
+MODEL_URL=https://huggingface.co/lmstudio-ai/gemma-2b-it-GGUF/resolve/main/gemma-2b-it-q4_k_m.gguf?download=true
+
 CLIENT_ID=<YOUR_CLIENT_ID_TOKEN>
 DEVELOPER_ID_TOKEN=<YOUR_DEVELOPER_ID_TOKEN>
 API_KEY=1234
-AGENT_COLLECTION_NAME=single-agent-collection-scenario
+AGENT_COLLECTION_NAME=single-agent-collection
