--- a/02-nvidia-architecture/coordinator-machine/env.template
+++ b/02-nvidia-architecture/coordinator-machine/env.template
@@ -1,10 +1,16 @@
 # Environment variables for the Controller machine
+
+IP_ADDRESS_AGENT_1=<IP_ADDRESS_AGENT_1_MACHINE>
+IP_ADDRESS_NVIDIA_AGENT=<IP_ADDRESS_NVIDIA_1_MACHINE>
+
+HOST_IP_ADDRESS=<IP_ADDRESS_OF_THE_COORDINATOR_COMPUTER>
+
 NODE_ID_AGENT_1=TO_BE_DETERMINED
 NODE_ID_NVIDIA_AGENT=TO_BE_DETERMINED
 NODE_ID_COORDINATOR=TO_BE_DETERMINED
-MODEL_URL=https://huggingface.co/lmstudio-community/gemma-1.1-2b-it-GGUF/resolve/main/gemma-1.1-2b-it-Q8_0.gguf?download=true
-HOST_IP_ADDRESS=<IP_ADDRESS_OF_THE_COORDINATOR_COMPUTER>
+MODEL_URL=https://huggingface.co/lmstudio-ai/gemma-2b-it-GGUF/resolve/main/gemma-2b-it-q4_k_m.gguf?download=true
+
 CLIENT_ID=<YOUR_CLIENT_ID_TOKEN>
 DEVELOPER_ID_TOKEN=<YOUR_DEVELOPER_ID_TOKEN>
 API_KEY=1234
-AGENT_COLLECTION_NAME=<ARBITRARY_AGENT_COLLECTION_NAME>
+AGENT_COLLECTION_NAME=standard-node-nvidia-collection
